Fix category filtering in the Django view and update Ajax calls to filter by category - Fix category filtering to use category name - Freeze DRF at 2.3.7 to avoid html rendering bug - Filter vision collections by category - Fix category list links

--- a/src/hatch/jstemplates/item-tpl.html
+++ b/src/hatch/jstemplates/item-tpl.html
@@ -1,5 +1,5 @@
 {{# if category }}
-<p class="in-response-to"><a href="/{{visions_url_name}}/{{ category }}/list">{{ category_prompt category }}</a></p>
+<p class="in-response-to"><a href="/{{visions_url_name}}/{{ category }}">{{ category_prompt category }}</a></p>
 {{/ if }}
 
 <div class="container container-primary">
@@ -41,7 +41,7 @@
       <span class="tweet-icon"><img class="tweet-icon-reply" src="/static/images/reply-icon.png"></span> Reply</a>
 
       {{# if category }}
-      <!-- <a href="/{{visions_url_name}}/{{ category }}/list" class="category-link"><strong class="capitalize">{{ category }}</strong></a> -->
+      <!-- <a href="/{{visions_url_name}}/{{ category }}" class="category-link"><strong class="capitalize">{{ category }}</strong></a> -->
       {{/ if }}
 
       {{#if_authenticated}}
