--- a/src/hatch/jstemplates/welcome-tpl.html
+++ b/src/hatch/jstemplates/welcome-tpl.html
@@ -14,7 +14,7 @@
             <img class="slide-image" src="{{ image }}" width="640" height="640">
 
             <div class="slide-header">
-              <h1 class="slide-question"><a href="/{{visions_url_name}}/{{name}}/list">{{ prompt }}</a></h1>
+              <h1 class="slide-question"><a href="/{{visions_url_name}}/{{name}}">{{ prompt }}</a></h1>
               <div class="slide-meta">
                 {{#if vision_count}}<span class="slide-stat"><strong class="ideas-count">{{ vision_count }}</strong> {{#if_plural vision_count}}{{app_config 'vision_plural' true}}{{^}}{{app_config 'vision' true}}{{/if_plural}}</span>{{/if}}
                 {{#if support_count}}<span class="slide-stat"><strong class="favorites-count">{{ support_count }}</strong> {{#if_plural support_count}}Supporters{{^}}Supporter{{/if_plural}}</span>{{/if}}
