Update the homepage template to be paginated - Update vision and user collection getters - Update showViewInRegion method - Call updated methods from home controller - Add PaginatedCompositeView base class - Derive vision list view from paginated composite view

--- a/src/hatch/jstemplates/list-tpl.html
+++ b/src/hatch/jstemplates/list-tpl.html
@@ -7,4 +7,5 @@
 
   <ul class="vision-list unstyled-list"></ul>
 
+  <a href="#" class="btn btn-block btn-tertiary load-more-action">Load more {{app_config 'vision_plural'}}</a>
 <div>
