--- a/src/hatch/jstemplates/home-tpl.html
+++ b/src/hatch/jstemplates/home-tpl.html
@@ -25,7 +25,7 @@
           <div class="slide-meta">
             {{#if vision_count}}<span class="slide-stat capitalize"><strong class="ideas-count">{{ vision_count }}</strong> {{#if_plural vision_count}}{{app_config 'vision_plural'}}{{^}}{{app_config 'vision'}}{{/if_plural}}</span>{{/if}}
             {{#if support_count}}<span class="slide-stat"><strong class="favorites-count">{{ support_count }}</strong> {{#if_plural support_count}}Supporters{{^}}Supporter{{/if_plural}}</span>{{/if}}
-            {{#if reply_count}}<span class="slide-stat"><strong class="comments-count">{{ reply_count }}</strong> {{#if_plural reply_count}}Comments{{^}}Comment{{/if_plural}}</span>{{/if}}
+            {{#if reply_count}}<span class="slide-stat"><strong class="comments-count">{{ reply_count }}</strong> {{#if_plural reply_count}}Replies{{^}}Reply{{/if_plural}}</span>{{/if}}
           </div>
         </li>
       {{/each_archived_category}}
