--- a/src/hatch/jstemplates/home-tpl.html
+++ b/src/hatch/jstemplates/home-tpl.html
@@ -1,4 +1,4 @@
-<div class="container home">
+<div class="container home {{^if active}}is-archived{{/if}}">
   {{> welcome-tpl }}
 
   <div class="visions-region"></div>
