Show a button to add a new vision interspersed throughout vision lists - Add a template helper flad to decide if a button should be shown - Move the Add button from the vision list to vision item template - Add styles

--- a/src/hatch/jstemplates/list-tpl.html
+++ b/src/hatch/jstemplates/list-tpl.html
@@ -1,11 +1,5 @@
 <div class="container">
-  {{#if_authenticated}}
-  <a href="/{{visions_url_name}}/{{ category }}/new" class="btn btn-block btn-tertiary"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
-  {{^}}
-  <a href="{{ LOGIN_URL '/' }}{{visions_url_name}}/{{ category }}/new" class="btn btn-block btn-tertiary">Sign In and Contribute <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
-  {{/if_authenticated}}
-
   <ul class="vision-list unstyled-list"></ul>
 
-  <a href="#" class="btn btn-block btn-tertiary load-more-action">Load more {{app_config 'vision_plural'}}</a>
+  <a href="#" class="load-more-action">Load more {{app_config 'vision_plural'}}</a>
 <div>
