fix horz scrolling

--- a/src/hatch/jstemplates/home-tpl.html
+++ b/src/hatch/jstemplates/home-tpl.html
@@ -1,7 +1,7 @@
 <div class="container home">
   {{> welcome-tpl }}
 
-  <div class="visions-region"></div>
+  <div class="visions-region container-fullwidth"></div>
 
   <div class="container-fullwidth welcome site-footer" id="site-footer">
 
