Update counts on the homepage without a page refresh - Transform the bootstrapped category information into a collection on init - Render the category header as a view into a region, and rerender on model change - Update the cateogry model (counts) when someone interacts with a vision, or makes a new one

--- a/src/hatch/jstemplates/home-tpl.html
+++ b/src/hatch/jstemplates/home-tpl.html
@@ -1,5 +1,5 @@
 <div class="container home">
-  {{> welcome-tpl }}
+  <div class="category-region"></div>
 
   <div class="visions-region container-fullwidth"></div>
 
