--- a/src/hatch/jstemplates/home-visionaries-tpl.html
+++ b/src/hatch/jstemplates/home-visionaries-tpl.html
@@ -18,7 +18,7 @@
   </p>
 
   <p>
-    Have a great idea for the future of {{app_config 'city'}}?
+    Have a great {{app_config 'vision'}}?
 
     {{#if_authenticated}}
     <strong>Add it here!</strong>
