--- a/src/hatch/jstemplates/home-category-tpl.html
+++ b/src/hatch/jstemplates/home-category-tpl.html
@@ -2,7 +2,7 @@
     <img class="slide-square" src="/static/images/transparent-square.gif" width="640" height="640">
     <img class="slide-image" src="{{ image }}" width="640" height="640">
     <div class="slide-header">
-      {{^if active}}<p class="inactive-message">This category<!-- TODO: config this --> is no longer active. Thank you for your participation. Check out the {{app_config 'vision_plural'}} below...</p>{{/if}}
+      {{^if active}}<p class="inactive-message">This is no longer active. Thank you for your participation. Check out the {{app_config 'vision_plural'}} below...</p>{{/if}}
       <h1 class="slide-question">{{ prompt }}</h1>
       <div class="slide-meta">
         {{#if vision_count}}<span class="slide-stat capitalize"><strong class="ideas-count">{{ vision_count }}</strong> {{#if_plural vision_count}}{{app_config 'vision_plural'}}{{^}}{{app_config 'vision'}}{{/if_plural}}</span>{{/if}}
