--- a/src/hatch/jstemplates/item-tpl.html
+++ b/src/hatch/jstemplates/item-tpl.html
@@ -1,5 +1,5 @@
 {{# if category }}
-<p class="in-response-to{{^if_active_category category}} is-archived{{/if_active_category}}"><a href="/{{visions_url_name}}/{{ category }}">{{ category_prompt category }}{{^if_active_category category}} (This category has been archived.){{/if_active_category}}</a></p>
+<p class="in-response-to{{^if_active_category category}} is-archived{{/if_active_category}}"><a href="/{{visions_url_name}}/{{ category }}">{{ category_prompt category }}{{^if_active_category category}} </small>(This has is no longer active)</small>{{/if_active_category}}</a></p>
 {{/ if }}
 
 <div class="container container-primary {{^if_active_category category}}is-archived{{/if_active_category}}">
@@ -22,7 +22,7 @@
       </span>
 
       <a href="#" class="support-link support{{#if_supported}} supported{{/if_supported}} hint--right"
-      {{^ if_authenticated}}data-hint="Sign in to support this {{app_config "vision"}}!"{{/if_authenticated}}>
+      {{^ if_authenticated}}{{#if_active_category category}}data-hint="Sign in to support this {{app_config "vision"}}!"{{/if_active_category}}{{/if_authenticated}}>
 
       <img class="heart" src="{{ STATIC_URL }}images/heart.png"> <span class="support-count total-support-count">{{ supporters.length }}</span></a>
 
@@ -33,11 +33,11 @@
     {{#if_active_category category}}
     <footer class="vision-footer clearfix">
       <a href="#" class="retweet-link{{#if_shared}} retweeted{{/if_shared}} hint--right"
-      {{^ if_authenticated}}data-hint="Sign in to retweet this {{app_config "vision"}}!"{{/if_authenticated}}>
+      {{^ if_authenticated}}{{#if_active_category category}}data-hint="Sign in to retweet this {{app_config "vision"}}!"{{/if_active_category}}{{/if_authenticated}}>
       <span class="tweet-icon"><img class="tweet-icon-retweet" src="/static/images/retweet-icon.png"></span> Retweet</a>
 
       <a href="#login-to-reply" class="reply-link show-reply hint--right"
-      {{^ if_authenticated}}data-hint="Sign in to reply to this {{app_config "vision"}}!"{{/if_authenticated}}>
+      {{^ if_authenticated}}{{#if_active_category category}}data-hint="Sign in to reply to this {{app_config "vision"}}!"{{/if_active_category}}{{/if_authenticated}}>
 
       <span class="tweet-icon"><img class="tweet-icon-reply" src="/static/images/reply-icon.png"></span> Reply</a>
 
