--- a/src/hatch/jstemplates/support-summary-tpl.html
+++ b/src/hatch/jstemplates/support-summary-tpl.html
@@ -1,5 +1,5 @@
 <a href="#" class="support-link support{{#if_supported}} supported{{/if_supported}} hint--right"
-{{^ if_authenticated}}data-hint="Sign in to support this {{app_config "vision"}}!"{{/if_authenticated}}>
+{{^ if_authenticated}}{{#if_active_category category}}data-hint="Sign in to support this {{app_config "vision"}}!"{{/if_active_category}}{{/if_authenticated}}>
 <img class="heart heart-inline" src="/static/images/heart-beige.png">
 
 {{#eq supporters.length 0}}
