Update the archived category text.

--- a/src/hatch/jstemplates/item-tpl.html
+++ b/src/hatch/jstemplates/item-tpl.html
@@ -1,5 +1,5 @@
 {{# if category }}
-<p class="in-response-to{{^if_active_category category}} is-archived{{/if_active_category}}"><a href="/{{visions_url_name}}/{{ category }}">{{ category_prompt category }}{{^if_active_category category}} </small>(This has is no longer active)</small>{{/if_active_category}}</a></p>
+<p class="in-response-to{{^if_active_category category}} is-archived{{/if_active_category}}"><a href="/{{visions_url_name}}/{{ category }}">{{ category_prompt category }}{{^if_active_category category}} </small>(This topic is no longer active)</small>{{/if_active_category}}</a></p>
 {{/ if }}
 
 <div class="container container-primary {{^if_active_category category}}is-archived{{/if_active_category}}">
