--- a/src/hatch/jstemplates/home-category-tpl.html
+++ b/src/hatch/jstemplates/home-category-tpl.html
@@ -11,9 +11,17 @@
       </div>
       {{#if active}}
       {{#if_authenticated}}
-      <a class="btn btn-tertiary" href="/{{visions_url_name}}/{{name}}/new"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
+      <a class="btn btn-tertiary" href="/{{visions_url_name}}/{{name}}/new"><span class="plus">+</span>
+        {{#app_config 'add_vision_text'}}
+          {{{.}}}
+        {{^}}
+          Add my {{app_config 'vision'}}
+        {{/app_config}}
+      </a>
       {{^}}
-      <a class="btn btn-tertiary" href="/login/twitter/?next=/{{visions_url_name}}/{{name}}/new"><span class="plus">+</span> Add my {{app_config 'vision'}}</a>
+      <a class="btn btn-tertiary" href="/login/twitter/?next=/{{visions_url_name}}/{{name}}/new">
+        Sign In and Contribute <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
+      </a>
       {{/if_authenticated}}
       {{/if}}
     </div>
