add/style walkthrough content

--- a/src/hatch/jstemplates/walkthrough-tpl.html
+++ b/src/hatch/jstemplates/walkthrough-tpl.html
@@ -1,20 +1,34 @@
 
 <div class="swiper-container">
   <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <h1>Explore conversations</h1>
-        <div class="pagination-btn-next">&gt;</div>
+
+    <div class="swiper-slide">
+      <div class="swiper-slide-container">
+        <h1>[Municipality] is collecting [ideas] [for how to make our city better]. </h1>
+        <p>Explore what others are saying. </p>
+        <div class="pagination-btn pagination-btn-next btn btn-primary">Next&nbsp;<span class="pagination-btn-icon">&#10142;</span></div>
       </div>
-      <div class="swiper-slide">
-        <h1>Sign in to participate</h1>
-        <div class="pagination-btn-prev">&lt;</div>
-        <div class="pagination-btn-next">&gt;</div>
+    </div>
+
+    <div class="swiper-slide">
+      <div class="swiper-slide-container">
+        <h1>Sign in to add [ideas].</h1>
+        <p>Signing in with Twitter lets you add your [ideas] from within [Hatch], and optionally tweet them on Twitter. </p>
+        <p class="small">[Hatch] does not tweet for you, change your profile, or see your personal information, direct messages, or password. </p>
+        <div class="pagination-btn pagination-btn-prev btn btn-secondary"><span class="pagination-btn-icon">&#8617;</span></div>
+        <div class="pagination-btn pagination-btn-next btn btn-primary">Next&nbsp;<span class="pagination-btn-icon">&#10142;</span></div>
       </div>
-      <div class="swiper-slide">
-        <h1>Or get involved on Twitter</h1>
-        <button class="btn btn-large btn-close">Get Started!</button>
-        <div class="pagination-btn-prev">&lt;</div>
+    </div>
+
+    <div class="swiper-slide">
+      <div class="swiper-slide-container">
+        <h1>Get involved on Twitter.</h1>
+        <p>You don't have to sign in to participate. You can also tweet using the [#hatch] hashtag and your ideas will be added here in [Hatch].</p>
+        <div class="pagination-btn pagination-btn-prev btn btn-secondary"><span class="pagination-btn-icon">&#8617;</span></div>
+        <button class="pagination-btn btn btn-primary btn-close"><span class="pagination-btn-icon">&nbsp;</span>Get Started<span class="pagination-btn-icon">&nbsp;</span></button>
       </div>
+    </div>
+
   </div>
 </div>
 <div class="pagination"></div>
