tweak walkthrough text

--- a/src/hatch/jstemplates/walkthrough-tpl.html
+++ b/src/hatch/jstemplates/walkthrough-tpl.html
@@ -12,8 +12,8 @@
 
     <div class="swiper-slide">
       <div class="swiper-slide-container">
-        <h1>Sign in to add [ideas].</h1>
-        <p>Signing in with Twitter lets you add your [ideas] from within [Hatch], and optionally tweet them on Twitter. </p>
+        <h1>Join the conversation.</h1>
+        <p>Sign in with Twitter to show support for your favorite [ideas], leave comments, and share your own [ideas] (and optionally tweet them on Twitter). </p>
         <p class="small">[Hatch] does not tweet for you, change your profile, or see your personal information, direct messages, or password. </p>
         <div class="pagination-btn pagination-btn-prev btn btn-secondary"><span class="pagination-btn-icon">&#8617;</span></div>
         <div class="pagination-btn pagination-btn-next btn btn-primary">Next&nbsp;<span class="pagination-btn-icon">&#10142;</span></div>
