Add active category to the walkthrough view context

--- a/src/hatch/jstemplates/walkthrough-tpl.html
+++ b/src/hatch/jstemplates/walkthrough-tpl.html
@@ -1,9 +1,11 @@
 
+
 <div class="swiper-container">
   <div class="swiper-wrapper">
 
     <div class="swiper-slide">
       <div class="swiper-slide-container">
+        {{ image }}
         <h1>[Municipality] is collecting [ideas] [for how to make our city better]. </h1>
         <p>Explore what others are saying. </p>
         <div class="pagination-btn pagination-btn-next btn btn-primary">Next&nbsp;<span class="pagination-btn-icon">&#10142;</span></div>
