--- a/src/hatch/jstemplates/walkthrough-tpl.html
+++ b/src/hatch/jstemplates/walkthrough-tpl.html
@@ -1,12 +1,17 @@
 
 
 <div class="swiper-container">
+
+  <div class="swiper-background-image-container">
+    <img class="swiper-background-image" src="{{ image }}" width="640" height="640">
+    <div class="swiper-background-gradient"></div>
+  </div>
+
   <div class="swiper-wrapper">
 
     <div class="swiper-slide">
       <div class="swiper-slide-container">
-        {{ image }}
-        <h1>[Municipality] is collecting [ideas] [for how to make our city better]. </h1>
+        <h1>{{app_config 'title'}} is collecting {{app_config 'vision_plural'}} for how to make our city better. </h1>
         <p>Explore what others are saying. </p>
         <div class="pagination-btn pagination-btn-next btn btn-primary">Next&nbsp;<span class="pagination-btn-icon">&#10142;</span></div>
       </div>
@@ -15,8 +20,7 @@
     <div class="swiper-slide">
       <div class="swiper-slide-container">
         <h1>Join the conversation.</h1>
-        <p>Sign in with Twitter to show support for your favorite [ideas], leave comments, and share your own [ideas] (and optionally tweet them on Twitter). </p>
-        <p class="small">[Hatch] does not tweet for you, change your profile, or see your personal information, direct messages, or password. </p>
+        <p>Sign in with Twitter to show support for your favorite {{app_config 'vision_plural'}}, leave comments, and share your own {{app_config 'vision_plural'}}. Don't worry. {{app_config 'title'}} doesn't tweet for you automatically.</p>
         <div class="pagination-btn pagination-btn-prev btn btn-secondary"><span class="pagination-btn-icon">&#8617;</span></div>
         <div class="pagination-btn pagination-btn-next btn btn-primary">Next&nbsp;<span class="pagination-btn-icon">&#10142;</span></div>
       </div>
@@ -25,7 +29,7 @@
     <div class="swiper-slide">
       <div class="swiper-slide-container">
         <h1>Get involved on Twitter.</h1>
-        <p>You don't have to sign in to participate. You can also tweet using the [#hatch] hashtag and your ideas will be added here in [Hatch].</p>
+        <p>You don't have to sign in to participate. You can also tweet using the {{app_config 'title'}} hashtag and your ideas will be added here.</p>
         <div class="pagination-btn pagination-btn-prev btn btn-secondary"><span class="pagination-btn-icon">&#8617;</span></div>
         <button class="pagination-btn btn btn-primary btn-close"><span class="pagination-btn-icon">&nbsp;</span>Get Started<span class="pagination-btn-icon">&nbsp;</span></button>
       </div>
