--- a/src/hatch/jstemplates/item-tpl.html
+++ b/src/hatch/jstemplates/item-tpl.html
@@ -41,7 +41,7 @@
 
       <span class="tweet-icon"><img class="tweet-icon-reply" src="/static/images/reply-icon.png"></span> Reply</a>
 
-      <a href="http://twitter.com/{{ app_config 'twitter_handle' }}/status/{{ app_tweet }}" target="_blank" class="twitter-link"><strong>View on Twitter</strong></a>
+      <a href="http://twitter.com/{{ app_config 'twitter_handle' }}/status/{{ first_of tweet_id app_tweet }}" target="_blank" class="twitter-link"><strong>View on Twitter</strong></a>
 
       {{#if_authenticated}}
       <div class="confirm-retweet-prompt retweet-prompt-box is-hidden">
